# axum-auth-demo

./: Cargo.toml  LICENSE-APACHE-2.0  README.md
pages/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
pages/src/: App.vue
pages/src/stores/: user.ts
src/: app.rs  auth.rs  common.rs  handler.rs  main.rs  oauth2.rs  settings.rs
src/handler/: auth.rs  greet.rs  info.rs
