[package]
name = "axum-auth-demo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
oauth2 = "5.0.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "fs"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
